# thesis

./: CMakeLists.txt
src/: GibbsSamplerND.cpp  GibbsSamplerND.h  ImageAsND.cpp  ImageAsND.h  Logger.h  NDImageDrawer.cpp  NDImageDrawer.h  NDSampler.cpp  NDSampler.h  NDTilingPixelSampler.cpp  NDTilingPixelSampler.h  NormalDistribution.h  Rect.h  main.cpp
